jQuery-File-Upload 8.5.0~core1

	* [Feature] #385 - Sanitize filenames for files uploaded
	* Merged in newest version (8.5.0), of jquery file upload from upstream
	-- Charlie Powell <charlie@eval.bz>  Mon, 08 Jul 2013 01:39:32 -0400

jQuery-File-Upload 8.1.0~core3

	* Minor updates to the file uploader to work on 2.5.8... these must have slipped through the cracks.
	-- Charlie Powell <charlie@eval.bz>  Thu, 27 Jun 2013 12:10:17 -0400

jQuery-File-Upload 8.1.0~core2

	* Updated jquery-file-upload to work with Core 2.5.6
	-- Charlie Powell <charlie@eval.bz>  Wed, 05 Jun 2013 05:06:56 -0400

jQuery-File-Upload 8.1.0~core1

	* [Bug] Fixed some bugs from 7 in the controller.
	* Imported newest version of JQuery-File-Upload from upstream repo.
	-- Charlie Powell <charlie@eval.bz>  Thu, 16 May 2013 02:30:07 -0400

jQuery-File-Upload 7.4.2~core2

	* Upgraded to latest release of jQuery-file-upload 7.4.2
	-- Charlie Powell <charlie@eval.bz>  Mon, 15 Apr 2013 15:28:38 -0400

jQuery-File-Upload 6.9.1~core4

	* [Bug] Fix in IE for uploading files.  That browser did not support json data returned, so it was
	  instead trying to download the recently uploaded file.  (Yeah, bizarre...)
	-- Charlie Powell <charlie@eval.bz>  Thu, 07 Mar 2013 23:09:18 -0500

jQuery-File-Upload 6.9.1~core3

	* Switched default upload method from POST to stream.  This allows for much larger files to be
	  uploaded at a time, (tested with a couple 1.7GB videos).  The browser will chunk up to
	  "ini_get('upload_max_filesize')" bytes at a time and upload pieces.
	* Switched the key name that tracks the files from "key" to "uploadkey".  This should help resolve the
	  weird random upload issues that have been experienced.
	-- Charlie Powell <charlie@eval.bz>  Wed, 20 Feb 2013 17:04:46 -0500

jQuery-File-Upload 6.9.1~core2

	* Set files to be auto uploaded by default
	* Rearranged the UI slightly
	* Updated the progress bar
	-- Charlie Powell <charlie@eval.bz>  15 Oct 2012

jQuery-File-Upload 6.9.1~core1
